# 4-course-os

./: .gitignore  CMakeLists.txt  LabsCheck.cppcheck  README.md  build.cmd  build.sh  cmakelists.txt
LabsCheck-cppcheck-build-dir/: CMakeCCompilerId.a1  CMakeCXXCompilerId.a1  files.txt  lastResults.xml  main.a1  main.a2  main.a3  main.s2  main.s3  process_launcher.a1  process_launcher.s1  statistics.txt
lab-helloworld/: CMakeLists.txt  main.cpp
lab-lib/: CMakeLists.txt  main.cpp  process_launcher.cpp  process_launcher.h  test.cpp
lab-lib-test/: CMakeLists.txt
lab-multiple-log/: CMakeLists.txt  main.cpp
lab-qwt/: CMakeLists.txt  main.cpp
lab-qwt/qtcreator/: CMakeLists.txt  main.cpp
lab-server/: CMakeLists.txt  main.cpp  temperatures.db
lab-server/frontend/: index.html
lab-temperature/: CMakeLists.txt  device_simulator.cpp  lab_temperature.cpp  main  main.cpp
lab-temperature/device-simulator/: main.py
